# Playground

./: .clang-format  CMakeLists.txt
codec/: main.c
cpp/: CMakeLists.txt  concurrency1.cpp  move_semantic.cpp  perfect_forwarding.cpp  scoped_enumerations.cpp  thread_safe_counter.cpp  timer.cpp
gst/: CMakeLists.txt  basic-tutorial-1.c
x11prog/: foo.c  foo1.c  foo2.c
